--- a/loginpage.html
+++ b/loginpage.html
@@ -17,8 +17,9 @@
         </div>
         <nav>
             <ul class="nav-links">
-                <li><a href="#">About Us</a></li>
-                <li><a href="#">Log in</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="aboutus.html">About Us</a></li>
+                <li><a href="loginpage.html">Log in</a></li>
             </ul>
         </nav>
     </header>
@@ -44,10 +45,10 @@
                         </div>
                     </div>
 
-                    <button type="submit" class="login-button">Login</button>
+                    <button type="submit" class="login-button" href="registrationpage.html">Login</button>
                 </form>
 
-                <a href="#" class="register-link">Register Account</a>
+                <a href="registrationpage.html" class="register-link">Register Account</a>
             </div>
         </section>
     </main>
