--- a/index.html
+++ b/index.html
@@ -17,8 +17,9 @@
         </div>
         <nav>
             <ul class="nav-links">
-                <li><a href="#">About Us</a></li>
-                <li><a href="#">Log in</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="aboutus.html">About Us</a></li>
+                <li><a href="loginpage.html">Log in</a></li>
             </ul>
         </nav>
     </header>
