--- a/dashboard.html
+++ b/dashboard.html
@@ -25,7 +25,7 @@
                     <li><a href="#">Profile</a></li>
                     <li><a href="#">Bottle Bin</a></li>
                     <li><a href="#">Reports</a></li>
-                    <li><a href="#">Logout</a></li>
+                    <li><a href="logout.php">Logout</a></li>
                 </ul>
             </nav>
         </aside>
