--- a/aboutus.html
+++ b/aboutus.html
@@ -20,7 +20,7 @@
             <ul class="nav-links">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="aboutus.html">About Us</a></li>
-                <li><a href="loginpage.html">Log in</a></li>
+                <li><a href="login.php">Log in</a></li>
             </ul>
         </nav>
     </header>
