--- a/loginpage.html
+++ b/loginpage.html
@@ -1,43 +1,3 @@
-<?php
-require 'config.php';
-
-// Check if a session is already started before calling session_start()
-if (session_status() == PHP_SESSION_NONE) {
-    session_start();
-}
-
-if(isset($_POST["submit"])) {
-    $email = $_POST["email"];
-    $password = $_POST["password"];
-
-    // Prepare SQL query to prevent SQL injection
-    $query = $conn->prepare("SELECT * FROM users WHERE email = ?");
-    $query->bind_param("s", $email);
-    $query->execute();
-    $result = $query->get_result();
-
-    // Check if the email exists in the database
-    if($result->num_rows > 0) {
-        $row = $result->fetch_assoc();
-        
-        // Verify the password
-        if(password_verify($password, $row['password'])) {
-            // Start session and save user data
-            $_SESSION["loggedin"] = true;
-            $_SESSION["email"] = $email;
-
-            // Redirect to dashboard.html after successful login
-            header("Location: dashboard.html");
-            exit(); // Ensure the script stops executing after the redirect
-        } else {
-            echo "<script> alert('Incorrect Password'); </script>";
-        }
-    } else {
-        echo "<script> alert('Email Not Registered'); </script>";
-    }
-}
-?>
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -47,7 +7,7 @@ if(isset($_POST["submit"])) {
     <title>Bottle Cycle</title>
     <link rel="stylesheet" href="login-register.css">
 </head>
-<body>
+<body >
     <header>
         <div class="logo-container">
             <img src="logo.png" alt="Bottle Cycle Logo" class="logo">
@@ -60,7 +20,7 @@ if(isset($_POST["submit"])) {
             <ul class="nav-links">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="aboutus.html">About Us</a></li>
-                <li><a href="login.php">Log in</a></li>
+                <li><a href="loginpage.html">Log in</a></li>
             </ul>
         </nav>
     </header>
@@ -69,7 +29,7 @@ if(isset($_POST["submit"])) {
         <section class="login-section">
             <div class="login-box">
                 <h2>Login</h2>
-                <form method="POST" action="">
+                <form>
                     <div class="input-group">
                         <label for="email">Email</label>
                         <div class="input-field">
@@ -86,10 +46,10 @@ if(isset($_POST["submit"])) {
                         </div>
                     </div>
 
-                    <button type="submit" name="submit" class="login-button">Login</button>
+                    <button type="submit" class="login-button" href="registrationpage.html">Login</button>
                 </form>
 
-                <a href="register.php" class="register-link">Register Account</a>
+                <a href="registrationpage.html" class="register-link">Register Account</a>
             </div>
         </section>
     </main>
