--- a/public/aboutus.html
+++ b/public/aboutus.html
@@ -2,7 +2,6 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="shortcut icon" type="x-icon" href="logo.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bottle Cycle</title>
     <link rel="stylesheet" href="aboutus.css">
@@ -51,12 +50,12 @@
                 <div class="team-member">
                     <img src="jay.jpg" alt="Jay Mar">
                     <h3>Jay Mar</h3>
-                    <p>Sytem Analyst</p>
+                    <p>Programmer</p>
                 </div>
                 <div class="team-member">
                     <img src="clarence.jpg" alt="Clarence Power">
                     <h3>Clarence Power</h3>
-                    <p>Programmer</p>
+                    <p>System Analyst</p>
                 </div>
             </div>
 
