--- a/aboutus.html
+++ b/aboutus.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="shortcut icon" type="x-icon" href="logo.png">
+    <link rel="shortcut icon" type="x-icon" href="drawable/logo.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bottle Cycle</title>
     <link rel="stylesheet" href="aboutus.css">
@@ -11,7 +11,7 @@
 <body >
     <header>
         <div class="logo-container">
-            <img src="logo.png" alt="Bottle Cycle Logo" class="logo">
+            <img src="drawable/logo.png" alt="Bottle Cycle Logo" class="logo">
             <div class="brand-info">
                 <h1>BOTTLE CYCLE</h1>
                 <p>Smart Arduino Based Plastic Bottle Bin</p>
@@ -39,22 +39,22 @@
             <!-- Team Section -->
             <div class="team">
                 <div class="team-member">
-                    <img src="noe.jpg" alt="Noe John Purisima">
+                    <img src="drawable/noe.jpg" alt="Noe John Purisima">
                     <h3>Noe John Purisima</h3>
                     <p>Project Manager</p>
                 </div>
                 <div class="team-member">
-                    <img src="kin.jpg" alt="Kin Raily Candar">
+                    <img src="drawable/kin.jpg" alt="Kin Raily Candar">
                     <h3>Kin Raily Candar</h3>
                     <p>Designer</p>
                 </div>
                 <div class="team-member">
-                    <img src="jay.jpg" alt="Jay Mar">
+                    <img src="drawable/jay.jpg" alt="Jay Mar">
                     <h3>Jay Mar</h3>
                     <p>Sytem Analyst</p>
                 </div>
                 <div class="team-member">
-                    <img src="clarence.jpg" alt="Clarence Power">
+                    <img src="drawable/clarence.jpg" alt="Clarence Power">
                     <h3>Clarence Power</h3>
                     <p>Programmer</p>
                 </div>
@@ -62,7 +62,7 @@
 
             <!-- Bottle Bin Image -->
             <div class="bottle-bin">
-                <img src="trashbinlogo.png" alt="Bottle Bin">
+                <img src="drawable/trashbinlogo.png" alt="Bottle Bin">
             </div>
         </section>
     </main>
