--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="shortcut icon" type="x-icon" href="logo.png">
+    <link rel="shortcut icon" type="x-icon" href="drawable/logo.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bottle Cycle</title>
     <link rel="stylesheet" href="styles.css">
@@ -10,7 +10,7 @@
 <body >
     <header>
         <div class="logo-container">
-            <img src="logo.png" alt="Bottle Cycle Logo" class="logo">
+            <img src="drawable/logo.png" alt="Bottle Cycle Logo" class="logo">
             <div class="brand-info">
                 <h1>BOTTLE CYCLE</h1>
                 <p>Smart Arduino Based Plastic Bottle Bin</p>
@@ -32,7 +32,7 @@
                 <p>REDUCE AND RECYCLE</p>
             </div>
             <div class="bin-image">
-                <img src="trashbinlogo.png" alt="Plastic Bottle Bin">
+                <img src="drawable/trashbinlogo.png" alt="Plastic Bottle Bin">
             </div>
         </section>
     </main>
